<resources>
    <string name="app_name">TerceiroKotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="employee_name">Employee Name</string>
    <string name="txtWelcome">Welcome!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtOthers">Others</string>
    <string name="txtActions">Actions:</string>
    <string name="txt_fill_the_informations">Fill the informations:</string>
    <string name="txt_submit">SUBMIT</string>
    <string name="select_your_search_paramenter">Select your search paramenter:</string>
    <string name="employee_email_com">employee@email.com</string>
    <string name="job_title">Job Title</string>
    <string name="details">DETAILS</string>
    <string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="labelId">\"Id: \"</string>
    <string name="employees_registered">Employees registered:</string>
    <string name="careers_registered">Careers registered:</string>
    <string name="_0">0</string>
    <string name="last_sync">Last Sync: </string>
</resources>