<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menuNavHome">

    <fragment
        android:id="@+id/menuNavHome"
        android:name="com.sampson.terceirokotlin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menuNavCreate"
        android:name="com.sampson.terceirokotlin.CreateFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/menuNavEdit"
        android:name="com.sampson.terceirokotlin.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/menuNavSearch"
        android:name="com.sampson.terceirokotlin.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/menuNavRemove"
        android:name="com.sampson.terceirokotlin.RemoveFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_remove" />

</navigation>